--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "zetta": "https://github.com/zettajs/zetta.git#increase_peer_touchback_timeout"
+    "zetta": "git://github.com/zettajs/zetta.git#increase_peer_touchback_timeout"
   },
   "devDependencies": {},
   "scripts": {
