--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "proxy",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
     "zetta": "git://github.com/zettajs/zetta.git#increase_peer_touchback_timeout"
   },
